--- a/src/Cpnucleo.Blazor/wwwroot/index.html
+++ b/src/Cpnucleo.Blazor/wwwroot/index.html
@@ -14,6 +14,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPN - Blazor</title>
+    <base href="/" />
     <!-- Mainly links -->
     <link href="https://cpnucleo-assets.azurewebsites.net/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cpnucleo-assets.azurewebsites.net/css/animate.css" rel="stylesheet">
